HTML - Adicionando fonte e imagens

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List Newbies</title>
-  </head>
-  <body>
-    <h1 class="title carnaval">Oi mae to no newbies</h1>
-    <h3>Oi mae to no newbies</h3>
-    <h6>Oi mae to no newbies</h6>
-    <p>Oi mae to no newbies</p>
-    <img
-      src="https://img-s-msn-com.akamaized.net/tenant/amp/entityid/AAMFKlp?w=300&h=157&q=60&m=6&f=jpg&u=t"
-      alt=""
+
+    <!-- Google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
     />
-  </body>
+  </head>
+  <body></body>
 </html>
