HTML - Marcação do header

--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="header">
+        <!-- ./ nivel atual -->
+        <!-- ../ nivel anterior -->
+        <img src="../assets/todo-log.svg" alt="" />
+      </div>
+    </div>
+  </body>
 </html>
