HTML - Marcação do formulário

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Phosphor -->
+    <!-- <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/bold/style.css"
+    /> -->
   </head>
   <body>
     <div class="wrapper">
@@ -22,6 +29,13 @@
         <!-- ./ nivel atual -->
         <!-- ../ nivel anterior -->
         <img src="../assets/todo-log.svg" alt="" />
+      </div>
+
+      <div class="main">
+        <form class="form">
+          <input type="text" placeholder="Adicione uma nova tarefa" />
+          <button type="submit">Criar</button>
+        </form>
       </div>
     </div>
   </body>
