HTML - Marcação do contador

--- a/index.html
+++ b/index.html
@@ -32,10 +32,21 @@
       </div>
 
       <div class="main">
-        <form class="form">
+        <form class="new_task_form">
           <input type="text" placeholder="Adicione uma nova tarefa" />
           <button type="submit">Criar</button>
         </form>
+
+        <div class="counter">
+          <p>
+            <strong>Tarefas criadas</strong>
+            <span>3</span>
+          </p>
+          <p>
+            <strong>Tarefas concluídas</strong>
+            <span>4</span>
+          </p>
+        </div>
       </div>
     </div>
   </body>
