HTML - Marcação da lista de tarefas

--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
             <span>4</span>
           </p>
         </div>
+
+        <div class="empty_tasks">
+          <img src="./assets/empty-tasks.svg" alt="" />
+          <div>
+            <p>Você ainda não tem tarefas cadastradas</p>
+            <p>Crie tarefas e organize seus itens a fazer</p>
+          </div>
+        </div>
+
+        <div class="tasks_list">
+          <div class="task">
+            <p>Dar banho nos gatos</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
