--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="style.css" />
+
     <!-- Phosphor -->
     <!-- <link
       rel="stylesheet"
