--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Phosphor -->
-    <!-- <link
+    <link
       rel="stylesheet"
       type="text/css"
       href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/bold/style.css"
-    /> -->
+    />
   </head>
   <body>
     <div class="wrapper">
@@ -36,7 +36,9 @@
       <main>
         <form class="new_task_form">
           <input type="text" placeholder="Adicione uma nova tarefa" />
-          <button type="submit">Criar</button>
+          <button type="submit">
+            Criar <i class="ph-bold ph-plus-circle"></i>
+          </button>
         </form>
 
         <section class="counter">
