CSS - Estilização do contador pt I

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </button>
         </form>
 
-        <section class="counter">
+        <section class="tasks_counter">
           <p>
             <strong>Tarefas criadas</strong>
             <span>3</span>
