CSS - Estilização do contador pt II

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         </form>
 
         <section class="tasks_counter">
-          <p>
+          <div class="all_tasks">
             <strong>Tarefas criadas</strong>
-            <span>3</span>
-          </p>
-          <p>
+            <span class="count">3</span>
+          </div>
+          <div class="done_tasks">
             <strong>Tarefas concluídas</strong>
-            <span>4</span>
-          </p>
+            <span class="count">4</span>
+          </div>
         </section>
 
         <section class="empty_tasks">
