CSS - Estilização da lista de tarefas pt. I

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
       type="text/css"
       href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/bold/style.css"
     />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/duotone/style.css"
+    />
   </head>
   <body>
     <div class="wrapper">
@@ -62,7 +68,18 @@
 
         <ul class="tasks_list">
           <li class="task">
-            <p>Dar banho nos gatos</p>
+            <div>
+              <i class="ph-duotone ph-circle-dashed"></i>
+              <p>Dar banho nos gatos</p>
+            </div>
+            <i class="ph-duotone ph-trash"></i>
+          </li>
+          <li class="task">
+            <div>
+              <i class="ph-duotone ph-check-circle"></i>
+              <p>Dar banho nos gatos</p>
+            </div>
+            <i class="ph-duotone ph-trash"></i>
           </li>
         </ul>
       </main>
