CSS - Estilização da lista de tarefas pt. II

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
         </section>
 
-        <section class="empty_tasks">
+        <section class="empty_tasks hidden">
           <img src="./assets/empty-tasks.svg" alt="" />
           <div>
             <p>Você ainda não tem tarefas cadastradas</p>
