CSS - Estilização da lista de tarefas pt. III

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
               <i class="ph-duotone ph-circle-dashed"></i>
               <p>Dar banho nos gatos</p>
             </div>
-            <i class="ph-duotone ph-trash"></i>
+            <i class="ph-duotone ph-trash delete_btn"></i>
           </li>
           <li class="task">
             <div>
               <i class="ph-duotone ph-check-circle"></i>
               <p>Dar banho nos gatos</p>
             </div>
-            <i class="ph-duotone ph-trash"></i>
+            <i class="ph-duotone ph-trash delete_btn"></i>
           </li>
         </ul>
       </main>
