CSS - Estilização da lista de tarefas pt IV

--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
         </section>
 
         <ul class="tasks_list">
-          <li class="task">
+          <li class="task todo">
             <div>
-              <i class="ph-duotone ph-circle-dashed"></i>
+              <i class="ph-duotone ph-circle-dashed check_btn"></i>
               <p>Dar banho nos gatos</p>
             </div>
             <i class="ph-duotone ph-trash delete_btn"></i>
           </li>
-          <li class="task">
+          <li class="task done">
             <div>
-              <i class="ph-duotone ph-check-circle"></i>
-              <p>Dar banho nos gatos</p>
+              <i class="ph-duotone ph-check-circle check_btn"></i>
+              <p class="risked">Dar banho nos gatos</p>
             </div>
             <i class="ph-duotone ph-trash delete_btn"></i>
           </li>
