JS - Capturando elementos na DOM

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 
       <main>
         <form class="new_task_form">
-          <input type="text" placeholder="Adicione uma nova tarefa" />
+          <input
+            id="task_input"
+            type="text"
+            placeholder="Adicione uma nova tarefa"
+          />
           <button type="submit">
             Criar <i class="ph-bold ph-plus-circle"></i>
           </button>
@@ -66,7 +70,7 @@
           </div>
         </section>
 
-        <ul class="tasks_list">
+        <ul id="tasks_list" class="tasks_list">
           <li class="task todo">
             <div>
               <i class="ph-duotone ph-circle-dashed check_btn"></i>
