--- a/index.html
+++ b/index.html
@@ -46,12 +46,7 @@
             type="text"
             placeholder="Adicione uma nova tarefa"
           />
-          <button
-            type="submit"
-            onclick="{
-            console.log('Add Task')
-          }"
-          >
+          <button type="submit" onclick="addTask(event)">
             Criar <i class="ph-bold ph-plus-circle"></i>
           </button>
         </form>
@@ -80,35 +75,26 @@
             <div>
               <i
                 class="ph-duotone ph-circle-dashed check_btn"
-                onclick="{
-                console.log('Task marcada como concluida');
-                console.log('hsdjkahkjsd');
-;              }"
+                onclick="completeTask(event)"
               ></i>
               <p>Dar banho nos gatos</p>
             </div>
             <i
               class="ph-duotone ph-trash delete_btn"
-              onclick="{
-              console.log('Task excluida');
-            }"
+              onclick="deleteTask(event)"
             ></i>
           </li>
           <li class="task done">
             <div>
               <i
                 class="ph-duotone ph-check-circle check_btn"
-                onclick="{
-                console.log('Task marcada como pendente');
-              }"
+                onclick="incompleteTask(event)"
               ></i>
               <p class="risked">Dar banho nos gatos</p>
             </div>
             <i
               class="ph-duotone ph-trash delete_btn"
-              onclick="{
-              console.log('Task excluida');
-            }"
+              onclick="deleteTask(event)"
             ></i>
           </li>
         </ul>
