JS - Criação e manipulação de elementos

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <ul id="tasks_list" class="tasks_list">
           <li class="task todo">
-            <div>
+            <div class="left_content">
               <i
                 class="ph-duotone ph-circle-dashed check_btn"
                 onclick="completeTask(event)"
@@ -85,7 +85,7 @@
             ></i>
           </li>
           <li class="task done">
-            <div>
+            <div class="left_content">
               <i
                 class="ph-duotone ph-check-circle check_btn"
                 onclick="incompleteTask(event)"
