JS - Implementação da renderização da listagem

--- a/index.html
+++ b/index.html
@@ -70,34 +70,7 @@
           </div>
         </section>
 
-        <ul id="tasks_list" class="tasks_list">
-          <li class="task todo">
-            <div class="left_content">
-              <i
-                class="ph-duotone ph-circle-dashed check_btn"
-                onclick="completeTask(event)"
-              ></i>
-              <p>Dar banho nos gatos</p>
-            </div>
-            <i
-              class="ph-duotone ph-trash delete_btn"
-              onclick="deleteTask(event)"
-            ></i>
-          </li>
-          <li class="task done">
-            <div class="left_content">
-              <i
-                class="ph-duotone ph-check-circle check_btn"
-                onclick="incompleteTask(event)"
-              ></i>
-              <p class="risked">Dar banho nos gatos</p>
-            </div>
-            <i
-              class="ph-duotone ph-trash delete_btn"
-              onclick="deleteTask(event)"
-            ></i>
-          </li>
-        </ul>
+        <ul id="tasks_list" class="tasks_list"></ul>
       </main>
     </div>
 
