JS - Implementação da função counter()

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <section class="tasks_counter">
           <div class="all_tasks">
             <strong>Tarefas criadas</strong>
-            <span class="count">3</span>
+            <span id="todo_count" class="count">0</span>
           </div>
           <div class="done_tasks">
             <strong>Tarefas concluídas</strong>
-            <span class="count">4</span>
+            <span id="done_count" class="count">0</span>
           </div>
         </section>
 
